Fix dropdown z-index bug

--- a/client/components/css/_header.scss
+++ b/client/components/css/_header.scss
@@ -79,6 +79,7 @@
   width: 100%;
   padding-left: 1rem;
   padding-bottom: 1rem;
+  z-index: 20;
 
   .menu-dropdown-index {
     width: 25%;
