--- a/client/components/css/_heading.scss
+++ b/client/components/css/_heading.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   background-color: #6ec3b4;
+  z-index: 10;
 
   .heading-title {
   	font-size: 1rem;
